# tuyotuyo-puyoai-open

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  tuyotuyo.sln
tuyotuyo/: .editorconfig  AI.cpp  AI.h  Connector.cpp  Connector.h  CrossFunc.cpp  CrossFunc.h  Detected.cpp  Detected.h  Detector.cpp  Detector.h  DlAI.cpp  DlAI.h  Duel.cpp  Duel.h  DuelAIAI.cpp  DuelAIAI.h  DuelHumanAI.cpp  DuelHumanAI.h  DuelOptimizer.cpp  DuelOptimizer.h  DuelPPTPC.cpp  DuelPPTPC.h  DuelPy.cpp  DuelToko.cpp  DuelToko.h  FormAIv2.cpp  FormAIv2.h  GameInfo.cpp  GameInfo.h  KeyStorkeGenerator.cpp  KeyStorkeGenerator.h  KeyStrokeQueue.cpp  KeyStrokeQueue.h  MSVAI.cpp  MSVAI.h  MoveSimulator.cpp  MoveSimulator.h  NeuralNet.cpp  NeuralNet.h  (+35 more)
tuyotuyo/ViGEm/: Client.h  Common.h
